fix italics issue on safari for approach last p

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -107,11 +107,7 @@ h4 {
 
 .cursive-font {
    font-family: $cursive-font;
-}
-
-.sans-font {
-    font-family: sans-serif;
-    font-style: italic;
+   font-style: italic;
 }
 
 .bold-font {
